--- a/style.css
+++ b/style.css
@@ -53,7 +53,9 @@ hr {
   filter: brightness(0) saturate(100%) invert(65%) sepia(71%) saturate(212%)
     hue-rotate(172deg) brightness(88%) contrast(85%);
 }
-
+.button {
+  cursor: pointer;
+}
 /* Bottom control panel  */
 
 .call-button {
@@ -173,6 +175,9 @@ hr {
   align-items: center;
   color: #5d5fef;
   display: flex;
+}
+.drop-down-menu {
+  padding: 1rem;
 }
 .msg-background {
   padding: 0.8rem 1.6rem;
